public/stylesheets/common/ie.css
a {
  color: #254555;
}

button {
  border: 1px solid #bbb;
  font: bold 12px Arial;
  padding: 3px;
  color: #454545;
  outline: 0;
  filter: progid:DXImageTransform.Microsoft.Gradient(GradientType=0, StartColorStr='#FFFFFF', EndColorStr='#CCCCCC');
}
  button.default {
    filter: progid:DXImageTransform.Microsoft.Gradient(GradientType=0, StartColorStr='#BAE0F5', EndColorStr='#84B0CA');
    border: 1px solid #597E93;
  }

/*---------------------- Drop-shadow replacements ----------------------------*/
.minibutton {
  border: 1px solid #ccc;
}

img.doc,
div.dialog,
.menu_content {
  margin: -6px 0 0 -6px;
  filter:
    progid:DXImageTransform.Microsoft.Shadow(color=#CCCCCC,direction=45,strength=3)
    progid:DXImageTransform.Microsoft.Shadow(color=#CCCCCC,direction=135,strength=3)
    progid:DXImageTransform.Microsoft.Shadow(color=#CCCCCC,direction=225,strength=3)
    progid:DXImageTransform.Microsoft.Shadow(color=#CCCCCC,direction=315,strength=3);
}

